criação e estilização da home page

--- a/index.html
+++ b/index.html
@@ -10,27 +10,198 @@
 
 <body>
     <header>
+
         <nav>
-            <a href="#image">
-                <img src="./IMG/logo_verdinho.jpg" width="400" height="300" alt="logo do VERDINHO">
-            </a>
+            <a href="#image"><img src="./IMG/logo_verdinho.jpg" width="400" height="300" alt="logo do VERDINHO"></a>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./HTML/produto.html">Produtos</a></li>
-                <li><a href="./HTML/sobre.html">Sobre</a></li>
+                <li><a href="./index.html" class="link">Home</a></li>
+                <li><a href="./HTML/produto.html" class="link">Produtos</a></li>
+                <li><a href="./HTML/sobre.html" class="link">Sobre</a></li>
             </ul>
         </nav>
+
     </header>
 
     <main>
-        <h1>Home</h1>
+        <section class="conteudo-inicial">
+            
+            <p class="subtitulo">Bem-vindo ao nosso restaurante</p>
+            <h1 class="titulo">VERDINHO</h1>
+            <h2 class="slogan">Comida leve, do jeito que você gosta</h2>
+            <div class="botoes">
+                <a href="./HTML/produto.html" class="botao">Produtos</a>
+                <a href="./HTML/sobre.html" class="botao">Sobre</a>
+            </div>
+
+        </section>
+
+        <section class="promocoes">
+
+            <h2>Promoções da Semana</h2>
+            <div class="card-container">
+
+                <!-- Card 1 -->
+                <div class="card">
+                    <span class="desconto">20% OFF</span>
+                    <img src="./IMG/erro_imagem.jpg" alt="Erro ao carregar as imagens">
+                    <div class="conteudo">
+                        <h3>Nome do Produto</h3>
+                        <p>Descrição curta e atraente do produto.</p>
+                        <div class="preco">
+                            <span class="preco-antigo">R$40,00</span>
+                            <span class="preco-novo">R$32,00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="card">
+                    <span class="desconto">20% OFF</span>
+                    <img src="./IMG/erro_imagem.jpg" alt="Erro ao carregar as imagens">
+                    <div class="conteudo">
+                        <h3>Nome do Produto</h3>
+                        <p>Descrição curta e atraente do produto.</p>
+                        <div class="preco">
+                            <span class="preco-antigo">R$40,00</span>
+                            <span class="preco-novo">R$32,00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="card">
+                    <span class="desconto">20% OFF</span>
+                    <img src="./IMG/erro_imagem.jpg" alt="Erro ao carregar as imagens">
+                    <div class="conteudo">
+                        <h3>Nome do Produto</h3>
+                        <p>Descrição curta e atraente do produto.</p>
+                        <div class="preco">
+                            <span class="preco-antigo">R$40,00</span>
+                            <span class="preco-novo">R$32,00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="card">
+                    <span class="desconto">20% OFF</span>
+                    <img src="./IMG/erro_imagem.jpg" alt="Erro ao carregar as imagens">
+                    <div class="conteudo">
+                        <h3>Nome do Produto</h3>
+                        <p>Descrição curta e atraente do produto.</p>
+                        <div class="preco">
+                            <span class="preco-antigo">R$40,00</span>
+                            <span class="preco-novo">R$32,00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 5 -->
+                <div class="card">
+                    <span class="desconto">20% OFF</span>
+                    <img src="./IMG/erro_imagem.jpg" alt="Erro ao carregar as imagens">
+                    <div class="conteudo">
+                        <h3>Nome do Produto</h3>
+                        <p>Descrição curta e atraente do produto.</p>
+                        <div class="preco">
+                            <span class="preco-antigo">R$40,00</span>
+                            <span class="preco-novo">R$32,00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 6 -->
+                <div class="card">
+                    <span class="desconto">20% OFF</span>
+                    <img src="./IMG/erro_imagem.jpg" alt="Erro ao carregar as imagens">
+                    <div class="conteudo">
+                        <h3>Nome do Produto</h3>
+                        <p>Descrição curta e atraente do produto.</p>
+                        <div class="preco">
+                            <span class="preco-antigo">R$40,00</span>
+                            <span class="preco-novo">R$32,00</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="secao-feedback">
+
+            <h2>O que dizem nossos clientes</h2>
+            <div class="container-feedback">
+
+                <div class="card-feedback">
+                    <p class="texto">“A comida é maravilhosa, o atendimento excelente e o ambiente super
+                        acolhedor. Voltaremos com certeza!”</p>
+                    <div class="informacoes-cliente">
+                        <span class="nome-cliente">Juliana M.</span>
+                        <span class="avaliacao">★★★★★</span>
+                    </div>
+                </div>
+
+                <div class="card-feedback">
+                    <p class="texto">“Uma experiência gastronômica incrível. Os pratos são muito bem servidos e o sabor
+                        é único.”</p>
+                    <div class="informacoes-cliente">
+                        <span class="nome-cliente">Carlos T.</span>
+                        <span class="avaliacao">★★★★☆</span>
+                    </div>
+                </div>
+
+                <div class="card-feedback">
+                    <p class="texto">“Ambiente agradável, comida deliciosa e ótimas opções vegetarianas. Super
+                    recomendo!”</p>
+                    <div class="informacoes-cliente">
+                        <span class="nome-cliente">Renata L.</span>
+                        <span class="avaliacao">★★★★★</span>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
     <footer>
-        <a href="mailto:verdinho@gmail.com">verdinho@gmail.com</a>
-        <a href="tel:+5511912345678">(11) 91234-5678</a>
-        <p>segunda a sexta - 10h às 19h.</p>
-        <p>sábado - 10h às 16h.</p>
+
+        <div class="container-footer">
+
+            <!-- Coluna Sobre -->
+            <div class="coluna-footer">
+                <h3>Sobre Nós</h3>
+                <p>No coração da cidade, o Verdinho nasceu da paixão por boa comida e bons momentos. Com ingredientes
+                    frescos e receitas que misturam tradição e criatividade, oferecemos uma experiência gastronômica
+                    acolhedora, saborosa e feita com carinho. Mais do que servir pratos, queremos criar memórias à mesa.
+                </p>
+            </div>
+
+            <!-- Coluna de horários -->
+            <div class="coluna-footer">
+                <h3>Horário de Funcionamento</h3>
+                <ul class="horarios">
+                    <li>Segunda-feira: <span>10:00 – 19:00</span></li>
+                    <li>Terça-feira: <span>10:00 – 19:00</span></li>
+                    <li>Quarta-feira: <span>10:00 – 19:00</span></li>
+                    <li>Quinta-feira: <span>10:00 – 19:00</span></li>
+                    <li>Sexta-feira: <span>10:00 – 19:00</span></li>
+                    <li>Sábado: <span>10:00 – 16:00</span></li>
+                    <li>Domingo: <span>Fechado</span></li>
+                </ul>
+            </div>
+
+            <!-- Coluna de contato -->
+            <div class="coluna-footer">
+                <h3>Fale Conosco</h3>
+                <a href="mailto:verdinho@gmail.com" class="link">verdinho@gmail.com</a>
+                <a href="tel:+5511912345678" class="link">(11) 91234-5678</a>
+            </div>
+
+        </div>
+
     </footer>
 </body>
 
